--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "lint": "eslint . --ext .js,.ts",
     "start": "tsc && node dist/index.js"
   },
   "repository": {
@@ -20,6 +21,9 @@
   "homepage": "https://github.com/tobiasvossen/typescript-apps-script#readme",
   "devDependencies": {
     "@types/google-apps-script": "^1.0.50",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   }
 }
