--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "format": "prettier . --check",
     "lint": "eslint . --ext .js,.ts",
     "start": "tsc && node dist/index.js"
   },
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
