🧑‍💻 add pre-commit hook

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:watch": "tsc --watch",
     "format": "prettier . --check",
     "lint": "eslint . --ext .js,.ts",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,13 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --fix",
+    "*.{js,ts,md}": "prettier --write"
   }
 }
